--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://advert-ease.github.io/admin",
+  "homepage": "",
   "dependencies": {
     "@google-cloud/datastore": "^7.5.1",
     "@testing-library/jest-dom": "^5.17.0",
