--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.9.4",
-    "sequelize": "^6.37.2",
+    "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   }
 }
